--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "axios": "^0.21.1",
+    "date-fns": "^2.16.1",
     "mathjs": "5.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
