--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules/
+/node_modules
 /.pnp
 .pnp.js
 
 # testing
 /coverage
 
+# production
+/build
 
 # misc
 .DS_Store
